--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-dark bg-dark">
-  <a class="navbar-brand">Todo App</a>
+  <a class="navbar-brand">Lista de Tarefas</a>
 </nav>
 <div class="container mt-4">
   <h3>Tarefas</h3>
